@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_catalog" meta_type="Plone Catalog Tool">
+  <column remove="True" value="collective_geo_styles" />
+</object>
