@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+  <javascript remove="True" id="++resource++collective.geo.mapwidget/collectivegeo.js"/>
+  <javascript remove="True" id="++resource++collective.geo.mapwidget/collectivegeo_init.js"/>
+</object>
